# what-unit-tests-tell-us-about-architecture

./: .gitignore  CMakeLists.txt  Readme.md
common-mistakes/: CMakeLists.txt  Readme.md
common-mistakes/app/: main.cpp
common-mistakes/src/: Detail.h  OverDefined.cpp  OverDefined.h  Processor.cpp  Processor.h  Producer.cpp  Producer.h
common-mistakes/test/: OverDefinedTest.cpp
dependency-inversion/: CMakeLists.txt
dependency-inversion/app/: main.cpp
dependency-inversion/src/: Abstraction.cpp  Abstraction.h  Detail.cpp  Detail.h
dependency-inversion/test/: AbstractionTest.cpp
interface-segregation/: CMakeLists.txt
interface-segregation/app/: main.cpp
interface-segregation/src/: SingleClassApp.cpp  SingleClassApp.h  User.cpp  User.h
interface-segregation/test/: SingleClassAppTest.cpp
open-closed/: CMakeLists.txt  Readme.md
open-closed/app/: main.cpp
open-closed/src/: BestFriend.cpp  BestFriend.h  Friend.cpp  Friend.h  FriendOfFriend.cpp  FriendOfFriend.h
open-closed/test/: BestFriendTest.cpp
single-responsibility/: CMakeLists.txt  EggLayingWoolMilkPig.cpp  EggLayingWoolMilkPig.h  EggLayingWoolMilkPigTest.cpp  One.cpp  One.h  Readme.md  Two.cpp  Two.h
single-responsibility/app/: main.cpp
single-responsibility/src/: EggLayingWoolMilkPig.cpp  EggLayingWoolMilkPig.h  Four.cpp  Four.h  Friend.cpp  Friend.h  FriendOfFriend.cpp  FriendOfFriend.h  One.cpp  One.h  SideEffect.cpp  SideEffect.h  SingleClassApp.cpp  SingleClassApp.h  Three.cpp  Three.h  Two.cpp  Two.h  User.cpp  User.h
single-responsibility/test/: EggLayingWoolMilkPigTest.cpp  (+2 more)
